<resources>
    <string name="app_name">SalvareDateCV</string>
    <string name="cv_name">Robert_CV</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="work_experience_head"><b>Work Experience</b></string>
    <string name="work_experience_body_position">WorkExperience</string>
    <string name="education_head"><b>Education</b></string>
    <string name="certificates_head"><b>Certificates</b></string>
    <string name="organizations_head"><b>Organizations</b></string>
    <string name="projects_head"><b>Projects</b></string>
    <string name="skills_competences_head"><b>Skills%Competences</b></string>
    <string name="languages_head"><b>Languages</b></string>
    <string name="interests_head"><b>Interests</b></string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cv_default_name">Your CV Name</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="cv_manager">CV Manager</string>
    <string name="ai_uitat_parola">Ai uitat parola?</string>
    <string name="nu_ai_cont">Nu ai cont? Sign up!</string>
    <string name="username">Username</string>
    <string name="telefon">Telefon</string>
    <string name="localitate">Localitate</string>
    <string name="parola">Parola</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="ai_deja_cont">Ai deja un cont? Login</string>
    <string name="reseteaza_parola">Reseteaza parola!</string>
    <string name="inapoi">Înapoi</string>
    <string name="trimite">Trimite</string>
    <string name="hide_pwd">Ascunde parola!</string>
    <string name="arata_parola">Arata parola!</string>
    <string name="btn_CVulMeu_text">CV-ul meu</string>
    <string name="btn_AdaugaCV_text">Adauga CV</string>
    <string name="btn_AdaugaEmail_text">Adauga E-mail</string>
    <string name="btn_Meniu_text">Meniu</string>
    <string name="btn_Logout_text">Logout</string>
    <string name="textView_ListaActivit_text">Lista activitatilor din contul dvs.:</string>
    <string name="btn_Profil_text">Profil</string>
    <string name="textView_email_text">Email</string>
    <string name="textView_AdaugaEmail_text">Adauga E-mail</string>
    <string name="textView_Email_text">E-mail</string>
    <string name="textView_profil_text">Profil</string>
    <string name="btn_schimbareParola_text">Schimbare parola</string>
    <string name="textView_username_text">Username:</string>
    <string name="textView_nume_text">Nume:</string>
    <string name="textView_prenume_text">Prenume:</string>
    <string name="textView_varsta_text">Varsta:</string>
    <string name="textView_localitate_text">Localitate:</string>
    <string name="textView8_text">Parola</string>
    <string name="textView9_text">Actuala</string>
    <string name="textView14_text">Reintrodu parola noua</string>
    <string name="textView13_text">Noua</string>
    <string name="textView15_text">Ai uitat parola?</string>
    <string name="button_salveaza_text">Salveaza</string>
    <string name="next">Next</string>
    <string name="view">Read</string>
    <string name="update">Update</string>
</resources>
