<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_read"
    style="@style/AppTheme"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salvaredatecv.robert.crud.ReadActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutHead"
        android:orientation="horizontal">


        <TextView
            android:text="@string/cv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCVName"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bMenu"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/login"/>

        <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bLogout"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/login"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollViewRead">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutScroll">

            <TextView
                android:text="@string/work_experience_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvWorkExperienceHead"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/work_experience_body_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvWorkExperiencePosition"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/education_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEducationCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/certificates_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvCertificatesCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/organizations_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvOrganizationsCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/projects_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvProjectsCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/skills_competences_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSkillsCompetencesCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/languages_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguagesCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:text="@string/interests_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvInterestsCV"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

    </ScrollView>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutBottom"
        android:orientation="horizontal">

            <Button
            android:text="@string/update"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:id="@+id/bUpdate"
                android:textColor="@color/black"
                android:background="@drawable/login"/>

            <Button
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bDelete"
                android:textColor="@color/black"
                android:background="@drawable/login"/>

    </LinearLayout>

</LinearLayout>
