<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    style="@style/AppTheme"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salvaredatecv.crud.CreateActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutHead">

        <EditText
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextId" />

        <Button
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bMenu"
            android:layout_weight="1" />

        <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bLogout"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:id="@+id/scrollViewCreate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutScroll">

            <TextView
                android:text="@string/work_experience_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvWorkExperience"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTextWorkExperience"
                />

            <TextView
                android:text="@string/education_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvEducation"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etEducation"
                />

            <TextView
                android:text="@string/certificates_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvCertificates"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etCertificates"
                />

            <TextView
                android:text="@string/organizations_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvOrganizations"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etOrganizations"
              />

            <TextView
                android:text="@string/projects_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvProjects"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etProjects"
                />

            <TextView
                android:text="@string/skills_competences_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSkillsCompetences"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etSkillsCompetences"
                />

            <TextView
                android:text="@string/languages_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguages"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etLanguages"
                />

            <TextView
                android:text="@string/interests_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvInterests"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etInterests"
                />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutBottom">

        <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bCreate"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bRead"
            android:layout_weight="1"
            android:text="@string/read" />

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bUpdate"
            android:layout_weight="1" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bDelete"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
