<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ai_uitat_parola"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.salvaredatecv.AiUitatParolaActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="187dp"
        android:id="@+id/textView6"
        android:text="@string/reseteaza_parola"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"/>
    <TextView
        android:text="Email:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView6"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="17dp"
        android:id="@+id/editText_mail"
        android:background="@drawable/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_mail"
        android:layout_alignStart="@+id/editText_mail"
        android:layout_marginTop="47dp"
        android:id="@+id/textView_inapoi"
        android:text="@string/inapoi"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:clickable="true" />
    <TextView
        android:text="@string/trimite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_inapoi"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp"
        android:id="@+id/textView_trimite"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
</RelativeLayout>