<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.salvaredatecv.proiectandro.SignUpActivity">
    <TextView
        android:text="Sign Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="41dp"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_username"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/textView"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Username"
        android:background="@drawable/login"/>
    <TextView
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="40dp"
        android:id="@+id/textView11"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="45dp"
        android:id="@+id/textView12"
        android:text="@string/telefon"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <TextView
        android:text="Localitate:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textView_localitate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/textView12"
        android:layout_alignEnd="@+id/textView10" />
    <TextView
        android:text="Parola:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_localitate"
        android:layout_alignStart="@+id/textView_localitate"
        android:layout_marginTop="39dp"
        android:id="@+id/textView16"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <TextView
        android:text="@string/confirma_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginTop="42dp"
        android:id="@+id/textView_confirmap"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <Button
        android:text="Sign Up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:id="@+id/button_singup"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/black"
        android:background="@drawable/login"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_parola"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Parola"
        android:background="@drawable/login"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignStart="@+id/editText_localitate" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText_localitate"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Localitate"
        android:background="@drawable/login"
        android:layout_alignBaseline="@+id/textView_localitate"
        android:layout_alignBottom="@+id/textView_localitate"
        android:layout_alignStart="@+id/editText_telefon" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_telefon"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Telefon"
        android:background="@drawable/login"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignStart="@+id/editText_email" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Email"
        android:background="@drawable/login"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/editText_username" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_confirmap"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="Confirma parola"
        android:background="@drawable/login"
        android:layout_alignBaseline="@+id/textView_confirmap"
        android:layout_alignBottom="@+id/textView_confirmap"
        android:layout_alignParentEnd="true" />
    <TextView
        android:text="@string/ai_deja_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_login1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView_confirmap" />
</RelativeLayout>